Fix appdrawer alignment

--- a/styles/opaque/appdrawer.css
+++ b/styles/opaque/appdrawer.css
@@ -18,7 +18,7 @@
 }
 
 #appdrawer-viewport {
-    margin: 86px 0px;
+    margin: 36px 0px;
 }
 
 #appdrawer-flowbox flowboxchild {
