--- a/styles/transparent/appdrawer.css
+++ b/styles/transparent/appdrawer.css
@@ -14,7 +14,7 @@
 }
 
 #appdrawer-viewport {
-    margin: 86px 0px;
+    margin: 36px 0px;
 }
 
 #appdrawer-flowbox flowboxchild {
